# 2017_module_8

./: .gitignore  README.md
doc/cc/: block1.tex  block2.tex  block3.tex  block4.tex  block5.tex
doc/project/: report.tex  testreport.tex
src/haskell/FP_project/: Case1.hs  Case1.pl  Case2.hs  Case3.hs  LPEvaluator.hs  LPTypes.hs  README.md
src/haskell/FP_project_Martijn/: Level1.hs  Level1.pl  Level2.hs  Level2.pl  Level3.hs  RoyalFamilyFacts.hs  readme  royal_family_facts.haskell  royal_family_facts.pl  test.pl
src/haskell/PP-project-2016/: .gitignore  BasicFunctions.hs  Checker.hs  Constants.hs  Grammar.hs  Main  README.md  Sprockell.hs  Tokenizer.hs  Types.hs
src/haskell/PP-project-2017/: ASTBuilder.hs  Checker.hs  CodeGen.hs  DemoMultipleSprockells.hs  FP_ParserGen.hs  Grammar.hs  HardwareTypes.hs  Main.hs  README.md  Simulation.hs  Test.hs  Tokenizer.hs  Types.hs  memory_management_ideas.txt
src/haskell/PP-project-2017/lib/sprockell-2017/: LICENSE  README.md  Setup.hs  sprockell.cabal
src/haskell/PP-project-2017/lib/sprockell-2017/src/: DemoCharIO.hs  DemoFib.hs  DemoMandelbrot.hs  DemoMultipleSprockells.hs  Sprockell.hs
src/haskell/PP-project-2017/lib/sprockell-2017/src/Sprockell/: BasicFunctions.hs  Debugger.hs  HardwareTypes.hs  Simulation.hs  Sprockell.hs  System.hs
src/haskell/series1/: series1.hs
src/haskell/series2/: series2.hs
src/haskell/series3/: series3.hs  standard_webpage.html
src/haskell/series4/: series4.hs  series4_2016.hs
src/haskell/series5/: .series5.hs.swo  (+4 more)
src/prolog/: ice.pl  monkey.pl  royal_family_facts.pl  trees.pl
(+241 files in other folders)
